--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>Portafolio Rouss</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,35 +16,6 @@
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
-
-			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button special">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
 
 			<!-- Banner -->
 				<section id="banner">
@@ -58,7 +29,6 @@
 								<li><a href="https://www.facebook.com/rouseblue85" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.linkedin.com/in/rosalba-mejia-78b23aa8/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/rouss1985" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
@@ -92,7 +62,11 @@
 								</div>
 								<div class="4u$ 12u$(medium)">
 									<h2>Soft Skills</h2>
-									<p>Trabajo en equipo,proactiva,autodidacta,manejo de estres,responsable.
+									<p>Trabajo en equipo,proactiva,autodidácta,manejo de estrés,responsable,
+										habilidades de autonomía, coherencia, integridad, interés por aprender cosas nuevas,
+										capacidad de atención y de escucha, autorregulación,curiosidad,
+										autenticidad, responsabilidad personal y social, capacidad de reflexión,
+										proactividad, pasión.
 									</p>
 								</div>
 							</div>
@@ -103,15 +77,15 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/SWAPI.png" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>API Star Wars</h2>
+							<p>Proyecto de consumo de la API de Star Wars. </p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>Se realiza un consumo de la API a tráves del método AJAX, y cuándo se obtiene la respuesta se itera sobre el JSON para pintar datos en el index a tráves del DOM.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://github.com/rouss1985/apiStarW.git" class="button">Link de Github</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -119,84 +93,71 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/RedSocial.png" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Red Social</h2>
+							<p>Proyecto donde se desarrolló una red social con una temática específica.</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>Proyecto donde se utiliza un localStorage de sus post de cada usuario. Cada post se realiza de manera asíncrona con AJAX y PHP. Este proyecto está montado sobre un servidor.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="http://petlovers.devrobots.com.mx/" class="button">URL de petlovers</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
+				</section>
+
+				<section id="two" class="spotlight style2 right">
+					<span class="image fit main"><img src="images/Freelancerok.png" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>Freelancer</h2>
+							<p>Maquetado de sitio</p>
+						</header>
+						<p>Proyecto en el cúal se maquetó un sitio web responsive, solo con css y html.</p>
+						<ul class="actions">
+							<li><a href="https://github.com/rouss1985/Reto-Freelancer" class="button">Link de Github</a></li>
+						</ul>
+					</div>
+					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- Four -->
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>Colaboraciones y Proyectos personales</h2>
+							<p>Son proyectos en los que actualmente colaboro</p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-area-chart"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<img class="img" src="./images/logoRevistayeah.png" alt="logo RevistaYeah">
+									<h3><a href="http://revistayeah.com/">RevistaYeah</a></h3>
+									<p>Revista digital con temas variados</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<img class="img" src="./images/logoEntrechicas.png" alt="logo Entrechicas">
+									<h3><a href="http://entrechicas.com.mx/">Entrechicas</a></h3>
+									<p>Sitio de entretenimiento para mujeres con diversas categorías</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="4u$ 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<img class="img" src="./images/robot.png" alt="Logo Devrobots">
+									<h3><a href="http://devrobots.com.mx/">Devrobots</a></h3>
+									<p>Consultoría TI</p>
 								</section>
 							</div>
 						</div>
 						<footer class="major">
 							<ul class="actions">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="#" class="button">Inicio</a></li>
 							</ul>
 						</footer>
 					</div>
 				</section>
 
 			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
-						</header>
-						<form method="post" action="#" class="container 50%">
-							<div class="row uniform 50%">
-								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
-							</div>
-						</form>
-					</div>
-				</section>
+
 
 			<!-- Footer -->
 				<footer id="footer">
