Se anexo el href del email y la opción de descargar mi cv

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 								<li><a href="https://www.facebook.com/rouseblue85" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.linkedin.com/in/rosalba-mejia-78b23aa8/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/rouss1985" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="mailto:rouss-1985@hotmail.com"  target="_blank" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
@@ -161,6 +162,7 @@
 
 			<!-- Footer -->
 				<footer id="footer">
+					<a  class= "cv" href="assets/CV-ROSA-OK.pdf" download="CV-Rouss" role="button">Descarga mi CV</a>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li>
 					</ul>
