Se anexo un target blank a los links necesarios

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 							<p>Desarrolladora web Frontend junior</p>
 							<h3 style=font-style:italic>Alias: "Roussblue"</h3>
 							<ul class="icons">
-								<li><a href="https://twitter.com/roussblue1985" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.facebook.com/rouseblue85" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.linkedin.com/in/rosalba-mejia-78b23aa8/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/rouss1985" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://twitter.com/roussblue1985" target="_blank" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/rouseblue85" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.linkedin.com/in/rosalba-mejia-78b23aa8/" target="_blank" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/rouss1985" target="_blank" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="mailto:rouss-1985@hotmail.com"  target="_blank" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</header>
@@ -86,7 +86,7 @@
 						</header>
 						<p>Se realiza un consumo de la API a tráves del método AJAX, y cuándo se obtiene la respuesta se itera sobre el JSON para pintar datos en el index a tráves del DOM.</p>
 						<ul class="actions">
-							<li><a href="https://github.com/rouss1985/apiStarW.git" class="button">Link de Github</a></li>
+							<li><a href="https://github.com/rouss1985/apiStarW.git" target="_blank" class="button">Link de Github</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -102,7 +102,7 @@
 						</header>
 						<p>Proyecto donde se utiliza un localStorage de sus post de cada usuario. Cada post se realiza de manera asíncrona con AJAX y PHP. Este proyecto está montado sobre un servidor.</p>
 						<ul class="actions">
-							<li><a href="http://petlovers.devrobots.com.mx/" class="button">URL de petlovers</a></li>
+							<li><a href="http://petlovers.devrobots.com.mx/" target="_blank" class="button">URL de petlovers</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -117,7 +117,7 @@
 						</header>
 						<p>Proyecto en el cúal se maquetó un sitio web responsive, solo con css y html.</p>
 						<ul class="actions">
-							<li><a href="https://github.com/rouss1985/Reto-Freelancer" class="button">Link de Github</a></li>
+							<li><a href="https://github.com/rouss1985/Reto-Freelancer" target="_blank" class="button">Link de Github</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -134,17 +134,17 @@
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<img class="img" src="./images/logoRevistayeah.png" alt="logo RevistaYeah">
-									<h3><a href="http://revistayeah.com/">RevistaYeah</a></h3>
+									<h3><a href="http://revistayeah.com/" target="_blank">RevistaYeah</a></h3>
 									<p>Revista digital con temas variados</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<img class="img" src="./images/logoEntrechicas.png" alt="logo Entrechicas">
-									<h3><a href="http://entrechicas.com.mx/">Entrechicas</a></h3>
+									<h3><a href="http://entrechicas.com.mx/" target="_blank">Entrechicas</a></h3>
 									<p>Sitio de entretenimiento para mujeres con diversas categorías</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<img class="img" src="./images/robot.png" alt="Logo Devrobots">
-									<h3><a href="http://devrobots.com.mx/">Devrobots</a></h3>
+									<h3><a href="http://devrobots.com.mx/" target="_blank">Devrobots</a></h3>
 									<p>Consultoría TI</p>
 								</section>
 							</div>
