--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<a  class= "cv" href="assets/CV-ROSA-OK.pdf" download="CV-Rouss" role="button">Descarga mi CV</a>
+					<a  class= "cv" href="assets/CVRosalba.pdf" download="CV-Rouss" role="button">Descarga mi CV</a>
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li>
 					</ul>
