actualizacion de skills

--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
 								</div>
 								<div class="4u 12u$(medium)">
 									<h2>Tech Skills</h2>
-									<p>Javascript,Jquery,Frameworks de CSS(materialize,boostrap,foundation),HTML, ECMAScript6,CSS, GitHub,WordPress,
-									   Planificación Estratégica,SEO,Microsoft Office,Docencia,
-									   APIS,Manejo de Office,Campañas publicitarias facebook,
-									   Manejo de redes sociales,MEtodología agile,Photoshop básico.
+									<p>Javascript, Jquery, Frameworks de CSS(materialize, boostrap, foundation, Bulma), HTML, ECMAScript6, CSS, GitHub, gitLab, Vue.js, WordPress,
+									   Planificación Estratégica, SEO, Trello, Microsoft Office, Docencia,
+									   APIS, Manejo de Office, Campañas publicitarias facebook,
+									   Manejo de redes sociales, Metodología agile, Photoshop básico.
 									</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
 									<h2>Soft Skills</h2>
-									<p>Trabajo en equipo,proactiva,autodidácta,manejo de estrés,responsable,
+									<p>Trabajo en equipo, proactiva, autodidácta, manejo de estrés, responsable,
 										habilidades de autonomía, coherencia, integridad, interés por aprender cosas nuevas,
-										capacidad de atención y de escucha, autorregulación,curiosidad,
+										capacidad de atención y de escucha, autorregulación, curiosidad,
 										autenticidad, responsabilidad personal y social, capacidad de reflexión,
 										proactividad, pasión.
 									</p>
